// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroPortfolio renders correctly with all props 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c9 {
  display: flex;
  gap: 1rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c7 {
  color: #b8c1ec;
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  min-height: 100vh;
  display: flex;
  align-items: center;
  padding: 5rem 0;
}

.c2 {
  display: flex;
  flex-direction: column-reverse;
  gap: 3rem;
  align-items: center;
}

.c3 {
  flex: 1;
  text-align: center;
}

.c4 {
  font-size: 0.75rem;
  letter-spacing: 0.15em;
  text-transform: uppercase;
  color: #b8c1ec;
  margin: 0 0 1rem;
}

.c5 {
  font-family: "Rainier",sans-serif;
  font-size: 3.25rem;
  font-weight: 700;
  color: #fffffe;
  line-height: 1;
  margin: 0 0 1rem;
}

.c6 {
  font-family: "Rainier",sans-serif;
  font-size: 1.5rem;
  color: #eebbc3;
  line-height: 1.2;
  margin: 0 0 1.5rem;
}

.c8 {
  max-width: 500px;
  margin: 0 auto 2.5rem;
  line-height: 1.6;
}

.c10 {
  display: inline-block;
  padding: 0.875rem 2rem;
  background: #eebbc3;
  color: #232946;
  font-weight: 700;
  font-size: 1rem;
  border-radius: 4px;
  text-decoration: none;
  transition: opacity 0.2s ease;
}

.c10:hover {
  opacity: 0.85;
}

.c11 {
  display: inline-block;
  padding: 0.875rem 2rem;
  border: 2px solid #eebbc3;
  color: #eebbc3;
  font-weight: 700;
  font-size: 1rem;
  border-radius: 4px;
  text-decoration: none;
  transition: all 0.2s ease;
}

.c11:hover {
  background: #eebbc3;
  color: #232946;
}

.c12 {
  position: relative;
  width: 240px;
  height: 240px;
  border-radius: 50%;
  overflow: hidden;
  flex-shrink: 0;
  border: 3px solid #eebbc3;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 600px) {
  .c9 {
    justify-content: center;
  }
}

@media (min-width: 1200px) {
  .c9 {
    justify-content: flex-start;
  }
}

@media (min-width: 1536px) {
  .c9 {
    justify-content: flex-start;
  }
}

@media (min-width: 1200px) {
  .c2 {
    flex-direction: row;
    justify-content: space-between;
    gap: 4rem;
  }
}

@media (min-width: 1200px) {
  .c3 {
    text-align: left;
  }
}

@media (min-width: 1200px) {
  .c5 {
    font-size: 5rem;
  }
}

@media (min-width: 1200px) {
  .c6 {
    font-size: 2rem;
  }
}

@media (min-width: 1200px) {
  .c8 {
    margin: 0 0 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c12 {
    width: 380px;
    height: 380px;
  }
}

<div>
  <section
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <p
            class="c4"
          >
            Hi, I'm
          </p>
          <h1
            class="c5"
          >
            Andrea Agostini
          </h1>
          <p
            class="c6"
          >
            Senior Frontend Developer & Tech Lead
          </p>
          <p
            class="c7 c8"
            variant="large"
          >
            Building ecommerce experiences with React, Next.js, TypeScript and Shopify. Based in Bangkok 🇹🇭, working remotely.
          </p>
          <div
            class="c9"
          >
            <a
              class="c10"
              href="#projects"
            >
              View Projects
            </a>
            <a
              class="c11"
              href="mailto:test@test.com"
            >
              Get in touch
            </a>
          </div>
        </div>
        <div
          class="c12"
        >
          <img
            alt="Andrea Agostini"
            src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800&h=800&fit=crop"
            style="object-fit: cover;"
          />
        </div>
      </div>
    </section>
  </section>
</div>
`;

exports[`HeroPortfolio renders correctly without secondary CTA 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c9 {
  display: flex;
  gap: 1rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c7 {
  color: #b8c1ec;
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  min-height: 100vh;
  display: flex;
  align-items: center;
  padding: 5rem 0;
}

.c2 {
  display: flex;
  flex-direction: column-reverse;
  gap: 3rem;
  align-items: center;
}

.c3 {
  flex: 1;
  text-align: center;
}

.c4 {
  font-size: 0.75rem;
  letter-spacing: 0.15em;
  text-transform: uppercase;
  color: #b8c1ec;
  margin: 0 0 1rem;
}

.c5 {
  font-family: "Rainier",sans-serif;
  font-size: 3.25rem;
  font-weight: 700;
  color: #fffffe;
  line-height: 1;
  margin: 0 0 1rem;
}

.c6 {
  font-family: "Rainier",sans-serif;
  font-size: 1.5rem;
  color: #eebbc3;
  line-height: 1.2;
  margin: 0 0 1.5rem;
}

.c8 {
  max-width: 500px;
  margin: 0 auto 2.5rem;
  line-height: 1.6;
}

.c10 {
  display: inline-block;
  padding: 0.875rem 2rem;
  background: #eebbc3;
  color: #232946;
  font-weight: 700;
  font-size: 1rem;
  border-radius: 4px;
  text-decoration: none;
  transition: opacity 0.2s ease;
}

.c10:hover {
  opacity: 0.85;
}

.c11 {
  position: relative;
  width: 240px;
  height: 240px;
  border-radius: 50%;
  overflow: hidden;
  flex-shrink: 0;
  border: 3px solid #eebbc3;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 600px) {
  .c9 {
    justify-content: center;
  }
}

@media (min-width: 1200px) {
  .c9 {
    justify-content: flex-start;
  }
}

@media (min-width: 1536px) {
  .c9 {
    justify-content: flex-start;
  }
}

@media (min-width: 1200px) {
  .c2 {
    flex-direction: row;
    justify-content: space-between;
    gap: 4rem;
  }
}

@media (min-width: 1200px) {
  .c3 {
    text-align: left;
  }
}

@media (min-width: 1200px) {
  .c5 {
    font-size: 5rem;
  }
}

@media (min-width: 1200px) {
  .c6 {
    font-size: 2rem;
  }
}

@media (min-width: 1200px) {
  .c8 {
    margin: 0 0 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c11 {
    width: 380px;
    height: 380px;
  }
}

<div>
  <section
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <p
            class="c4"
          >
            Hi, I'm
          </p>
          <h1
            class="c5"
          >
            Andrea Agostini
          </h1>
          <p
            class="c6"
          >
            Senior Frontend Developer & Tech Lead
          </p>
          <p
            class="c7 c8"
            variant="large"
          >
            Building ecommerce experiences with React, Next.js, TypeScript and Shopify. Based in Bangkok 🇹🇭, working remotely.
          </p>
          <div
            class="c9"
          >
            <a
              class="c10"
              href="#projects"
            >
              View Projects
            </a>
          </div>
        </div>
        <div
          class="c11"
        >
          <img
            alt="Andrea Agostini"
            src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800&h=800&fit=crop"
            style="object-fit: cover;"
          />
        </div>
      </div>
    </section>
  </section>
</div>
`;
